# nvafx-audio-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
docs/: design.md  internal-apt-packaging.md  linux.md  release-packaging.md  release-v0.3.0-scope.md  release-v0.3.1-scope.md  sdk-enabled-distribution-policy.md
packaging/msi/: Product.wxs  README.md  build-msi.ps1  path_custom_action.cpp
scripts/: build_internal_apt_packages.py  build_linux_sdk_local.py  check_deb_package.py  check_repo_hygiene.ps1  check_repo_hygiene.py
src/: afx_sdk.cpp  afx_sdk.hpp  cli.cpp  cli.hpp  main.cpp  sdk_discovery.cpp  sdk_discovery.hpp  stdio_binary.cpp  stdio_binary.hpp  wav.cpp  wav.hpp
tests/: assert_help_contains.cmake  create_dummy_model.cmake  run_and_assert_no_output.cmake  run_build_linux_sdk_local_tests.cmake  run_check_sdk_fake_tree.cmake  run_dry_run_stdout_empty.cmake  run_invalid_stdin_error.cmake  run_manual_linux_sdk_processing.cmake  run_sdk_disabled_stdout_clean.cmake  run_stdin_dry_run.cmake  run_wav_stream_stdout_roundtrip.cmake  wav_fixture.cpp  wav_inspect.cpp  wav_roundtrip.cpp  wav_stdout.cpp
